# Library-service

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  borrowings.json  compose.yaml  initial_data.json  manage.py  pyproject.toml  sample_books_service.json
.github/workflows/: ci.yml  ruff.yml
books_service/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
books_service/migrations/: 0001_initial.py  0002_book_image.py
books_service/tests/: test_book_images.py  test_books_service_api.py  test_books_service_cache.py
borrowings/: admin.py  models.py  serializers.py  urls.py  views.py
borrowings/migrations/: 0001_initial.py  0002_alter_borrowing_actual_return_date_and_more.py
borrowings/tests/: test_borrowing_cache.py  tests_borrowings.py
core/: settings.py  urls.py
core/settings/: base.py  dev.py  prod.py
payments/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_payment_session_url.py  0003_alter_payment_status.py
telegram/: apps.py  bot_handler.py  signals.py  tests.py  urls.py  views.py
users/: models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py
